<resources>
    <string name="app_name">Tokai</string>
    <string name="app_targete">Alarm target</string>
    <string name="app_time_hint">On</string>
    <string name="app_period_hint">After</string>
    <string name="alarm_save">Save</string>
    <string name="alarm_start">Start</string>
    <string name="drawer_item_home">Home</string>
    <string name="drawer_item_free_play">Free Play</string>
    <string name="drawer_item_custom">Custom</string>
    <string name="drawer_item_settings">Settings</string>
    <string name="drawer_item_help">Help</string>
    <string name="drawer_item_open_source">Open Source</string>
    <string name="drawer_item_contact">Contact</string>
</resources>
